Spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ img {
 }
 
 .chart {
+  display: inline-block;
   width: 400px;
   height: 300px;
   background-color: #fff;
